--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Flask==2.3.2
 -f https://download.pytorch.org/whl/torch_stable.html                                                                                                                                                             
 torch==1.8.0+cpu
 -f https://download.pytorch.org/whl/torch_stable.html
@@ -5,5 +6,4 @@ torchvision==0.9.0+cpu
 numpy
 pandas
 matplotlib
-Flask
 Flask-Cors
