--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Flask==2.3.2
+Flask
 -f https://download.pytorch.org/whl/torch_stable.html                                                                                                                                                             
 torch==1.8.0+cpu
 -f https://download.pytorch.org/whl/torch_stable.html
